<resources>
    <string name="app_name">MemoryNotes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>

    <string name="content_home">This is the Home Screen</string>
    <string name="content_dashboard">This is the DashBoard Screen</string>
    <string name="content_notification">This is the Notification Screen</string>
    <string name="content_profile">This is the Profile Screen</string>
    <string name="content_settings">This is the Settings Screen</string>
</resources>
