<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.memorynotes.presentation.ListFragment"
        android:label="fragment_list"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/actionGoToNote"
            app:destination="@id/noteFragment" />
    </fragment>
    <fragment
        android:id="@+id/noteFragment"
        android:name="com.example.memorynotes.presentation.NoteFragment"
        android:label="fragment_note"
        tools:layout="@layout/fragment_note">
        <argument
            android:name="noteId"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mapbox_provider.ui.MapFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.memorynotes.ui.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.memorynotes.ui.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.memorynotes.ui.SettingsFragment"
        android:label="@string/title_settings" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.memorynotes.ui.ProfileFragment"
        android:label="@string/title_profile" />
</navigation>